<resources>
    <string name="app_name" translatable="false">Inex Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="action_voting">Voting</string>
    <string name="action_add">New talk</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this talk</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Conference details</string>
    <string name="action_secure">Secure talk</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_mysql">MYSQL</string>
    <string name="title_activity_voting">Voting</string>
    <string name="title_activity_conference_details">Conference Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_sharewith">Share with talk</string>
    <string name="title_activity_start_conversation">Start talk</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="unread_conversations">unread talks</string>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The talk associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The talk associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start talk</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">Talks has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of talks\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="choose_wallpaper">Choose wallpapers</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="preparing_images">Preparing images for transmission</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear talk History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this talk?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="also_end_conversation">End this talk afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send unencrypted message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_otr_message">Send OTR encrypted message</string>
    <string name="send_omemo_message">Send encrypted text</string>
    <string name="send_omemo_x509_message">Send v\\ encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Talks utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Inex afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="openkeychain_not_installed">Please install OpenKeychain</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_return_to_previous">Quick Sharing</string>
    <string name="pref_return_to_previous_summary">Immediately return to previous activity instead of opening the talk after sharing something</string>
    <string name="pref_notification_settings">Notificationы</string>
    <string name="pref_notifications">Sound new message</string>
    <string name="pref_notifications_summary">Play sound when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Selecting ringtone when you receive a new message</string>
    <string name="load_sound_out">Sound out message</string>
    <string name="load_sound_out_summary">Play sound message to be sent</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time talks keeps quiet after seeing activity on another device</string>
    <string name="load_address_book">Download address book</string>
    <string name="load_address_book_summary">Loads the address book when you start messenger</string>
    <string name="search">Search</string>
    <string name="create_contact">Create Contact</string>
    <string name="pref_security_settings">Security</string>
    <string name="pref_allow_message_correction">Allow message correction</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_expert_options">Expert settings</string>
    <string name="pref_expert_options_summary">Please be careful with these</string>
    <string name="title_activity_about">About talks</string>
    <string name="pref_about_conversations_summary">Build and licensing information</string>
    <string name="title_pref_quiet_hours">Quiet Hours</string>
    <string name="title_pref_quiet_hours_start_time">Start time</string>
    <string name="title_pref_quiet_hours_end_time">End time</string>
    <string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
    <string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
    <string name="pref_expert_options_other">Other</string>
    <string name="account_details">Account details</string>
    <string name="pref_export_logs">Export history</string>
    <string name="pref_export_logs_summary">Write talks history logs to SD card</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="pref_quick_action_summary">Replace send button with quick action</string>
    <string name="pref_quick_action">Quick Action</string>
    <string name="choose_quick_action">Choose quick action</string>
    <string name="pref_presence_settings">Presence</string>
    <string name="pref_away_when_screen_off">Away when screen is off</string>
    <string name="pref_away_when_screen_off_summary">Marks your resource as away when the screen is turned off</string>
    <string name="pref_xa_on_silent_mode">Not available in silent mode</string>
    <string name="pref_xa_on_silent_mode_summary">Marks your resource as not available when device is in silent mode</string>
    <string name="pref_treat_vibrate_as_silent">Treat vibrate as silent mode</string>
    <string name="pref_treat_vibrate_as_silent_summary">Marks your resource as not available when device is on vibrate</string>
    <string name="pref_picture_compression">Compress Pictures</string>
    <string name="pref_picture_compression_summary">Resize and compress pictures</string>
    <string name="pref_manually_change_presence">Manually change presence</string>
    <string name="pref_manually_change_presence_summary">Touch your avatar to change your presence</string>
    <string name="pref_delete_omemo_identities">Delete OMEMO identities</string>
    <string name="pref_delete_omemo_identities_summary">Regenerate your OMEMO keys. All your contacts will have to verify you again. Use this only as a last resort.</string>
    <string name="pref_clean_cache_summary">Clean cache folder (used by Camera Application)</string>
    <string name="pref_clean_cache">Clean cache</string>
    <string name="pref_clean_private_storage">Clean private storage</string>
    <string name="pref_clean_private_storage_summary">Clean private storage where files are kept (They can be re-downloaded from the server)</string>
</resources>