<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_account_details"
        android:title="@string/account_details"
        android:showAsAction="always"
        android:icon="@drawable/ic_account_box_white_24dp"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_mysql"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_voting"
        android:icon="@drawable/ic_action_copy_white"/>
    <!--android:title="Mytest"-->
</menu>