<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:actionLayout="@layout/actionview_search"
        android:icon="?attr/icon_search"
        android:showAsAction="collapseActionView|always"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_create_contact"
        android:icon="?attr/icon_add_person"
        android:showAsAction="always"
        android:title="@string/create_contact"
        android:visible="false"/>
    <item
        android:id="@+id/action_mysql"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_voting"
        android:icon="@drawable/ic_action_copy_white"/>

</menu>
